[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/balloon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Both/Balloon3D.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Nouvelle animation"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1.25, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0.75, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.53788, 1.8486, 0.0667454 )

[node name="Balloon3D" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Nouvelle animation"
"anims/Nouvelle animation" = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0 )
material_override = SubResource( 2 )
pixel_size = 0.005

[node name="HitboxBallon" type="Area" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="HitboxBallon"]
shape = SubResource( 3 )

[connection signal="area_shape_entered" from="HitboxBallon" to="." method="_on_HitboxBallon_area_shape_entered"]
